test/compile_errors/err_unreachable_after_break.w
//! expect-error: unreachable code

fn f():
    for x in 0..10:
        break
        print("hi")
